@@ -1,3 +1,4 @@
+  - make config vars compile statically (Monte)
   - added block-methods for registered objects (Bharat Mediratta, messju)
   - ignore one char resource names like c:foo.tpl (Monte)
   - added default_resource_type feature (Monte)
